ecmascript/parser/tests/test262-error-references/fail/c4236b612ac61d44.js.stderr
error: Unexpected token Some(Semi)
 --> $DIR/tests/test262-parser/fail/c4236b612ac61d44.js:1:11
  |
1 | let x, y, ;
  |           ^

